--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "javascript-time-ago": "^2.5.11",
